fix(jdk17): batch-3 adaptations for the 26.9.1 backport
Mechanical catalog rewrites (List.getFirst()/getLast(), Thread.threadId())
plus four that needed a decision:
- CypherExpressionWalker/CypherVariableUsage/RemoteGrpcDatabase: pattern-
  matching switches rewritten as if/instanceof chains, keeping upstream's arm
  order and its new ChainedPropertyAccessExpression case
- LongRangeList.reversed(): List.reversed() is SequencedCollection (JDK 21),
  so this is a plain method on the class rather than an override; both callers
  hold a LongRangeList and still get the lazy range
- Issue5470BatchErrorDeliveryIT: HttpClient is not AutoCloseable before JDK 21