@@ -361,13 +361,13 @@ public class SelectExecutor {
     }
 
     final boolean orderByElided = select.orderBy != null && select.orderBy.size() == 1 && trailingProperty != null
-        && select.orderBy.getFirst().getFirst().equals(trailingProperty);
+        && select.orderBy.get(0).getFirst().equals(trailingProperty);
 
     // A KEY SHORTER THAN THE INDEX'S FULL ARITY IS A PREFIX, NOT AN EXACT KEY: get() PERFORMS A SINGLE POSITIONAL
     // LOOKUP AND ONLY RETURNS EVERY MATCH WHEN THE KEY'S ARITY MATCHES THE INDEX'S OWN EXACTLY, SO A PREFIX MUST GO
     // THROUGH range() WITH EQUAL (INCLUSIVE) BEGIN/END BOUNDS INSTEAD - SEE LSMTreeIndexCompacted's "PARTIAL KEY
     // COMPARISON...MATCHES BY PREFIX" (PURPOSE=2).
-    final boolean ascendingOrder = orderByElided ? select.orderBy.getFirst().getSecond() : true;
+    final boolean ascendingOrder = orderByElided ? select.orderBy.get(0).getSecond() : true;
     final IndexCursor cursor = fullKeyMatch ? bestIndex.get(keys) : bestIndex.range(ascendingOrder, keys, true, keys, true);
 
     if (cursor == null)
@@ -526,7 +526,7 @@ public class SelectExecutor {
       return true;
     if (leaf == null || select.orderBy.size() != 1)
       return false;
-    final Pair<String, Boolean> orderBy = select.orderBy.getFirst();
+    final Pair<String, Boolean> orderBy = select.orderBy.get(0);
     // UNCHECKED CAST IS SAFE: leaf CAME FROM soleExactLeaf(), WHICH ONLY EVER RETURNS A NODE WHOSE node.index IS
     // NON-null - AND isTheNodeFullyIndexed() ONLY EVER SETS node.index AFTER THIS EXACT SAME CAST ON node.left
     // ALREADY SUCCEEDED
