@@ -210,7 +210,7 @@ class Issue6281AsyncBatchIndexBuildTest extends TestHelper {
   @Test
   void aBucketIndexBuiltDirectlyOverAnIdleAsyncExecutorStillCoversItsUncommittedBatch() throws Exception {
     database.transaction(() -> database.getSchema().createDocumentType("V", 1).createProperty("id", Type.INTEGER));
-    final String bucketName = database.getSchema().getType("V").getBuckets(false).getFirst().getName();
+    final String bucketName = database.getSchema().getType("V").getBuckets(false).get(0).getName();
 
     database.async().setParallelLevel(2);
 
